# ParquetReader

./: Cargo.toml  build.rs  parquet_reader.py
src/: main.rs
ui/: main.slint
