[package]
name = "slint01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "49.0.0"
arrow-csv = "49.0.0"
chrono = "0.4.31"
parquet = "49.0.0"
native-dialog = "0.7.0"
slint = "1.3.0"

[build-dependencies]
slint-build = "1.3.0"