[package]
name = "slint01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.35.4", features = ["parquet","lazy","json", "sql", "dtype-u8"]}
native-dialog = "0.7.0"
slint = "1.3.0"

[build-dependencies]
slint-build = "1.3.0"
